# Hello_pulse_sondage

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-airflow.yml  docker-compose.yml  main.py  pyproject.toml
config/: airflow.cfg
data/raw/: survey.csv  survey_update01.xlsx
datas/: HELLO PULSE .csv
notebooks/: 01_exploratory_data_analysis.ipynb  HP_SURVEY_ipynb (1).ipynb  HP_SURVEY_ipynb.ipynb
