[project]
name = "hello-pulse-survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.0.2",
    "dbt-core>=1.10.2",
    "dbt-postgres>=1.9.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kernel>=0.8.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=1.4.54",
    "streamlit>=1.46.1",
]
